fixed pre-wrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -339,7 +339,7 @@ article .posted {
 }
 
 pre, article p, li {
-  white-space: pre-line;
+  white-space: pre-wrap;
   line-height: 1.3rem;
 }
 
